# yfinance_fixed

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
src/yfinance_fixed/: __init__.py  yfinance_fixed.py
tests/: test_get_data.py
